--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "jest --maxWorkers=3",
     "prettier": "prettier --single-quote --print-width 90 --trailing-comma es5 --write \"{*,{src,scripts,demo}/**/}*.js*\"",
     "lint": "eslint --ext .js --ext .jsx src demo scripts",
-    "build": "NLP_HOST=https://https://corenlp.run/ webpack",
-    "gh-pages": "OUTPUT=/assets NLP_HOST=https://https://corenlp.run/ webpack; node scripts/fixGhPagesIndex.js",
+    "build": "NLP_HOST=https://corenlp.run/ webpack",
+    "gh-pages": "OUTPUT=/assets NLP_HOST=https://corenlp.run/ webpack; node scripts/fixGhPagesIndex.js",
     "start": "webpack-dev-server --hot --inline",
     "gen-pattern": "node scripts/genPattern.js",
     "mv": "node scripts/mv.js",
@@ -60,7 +60,7 @@
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "node-debug": "^0.1.0",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.14.1",
     "pre-commit": "^1.2.2",
     "prettier": "^2.1.2",
     "react-router-dom": "^4.1.1",
